--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1"
   }
 }
